--- a/dev/sass/mixins/_media.scss
+++ b/dev/sass/mixins/_media.scss
@@ -1,12 +1,32 @@
 //media queries
+
+@mixin screen($size){
+  @media #{$size}{
+    @content;
+  }
+}
+
 @mixin min-screen($res){
-	@media screen and (min-width: $res){
-		@content;
-	}
+  @media screen and (min-width: $res){
+    @content;
+  }
 }
 
 @mixin max-screen($res){
-	@media screen and (max-width: $res){
-		@content;
-	}
+  @media screen and (max-width: $res){
+    @content;
+  }
 }
+
+@mixin retina(){
+  @media
+  only screen and (-webkit-min-device-pixel-ratio: 2),
+  only screen and (   min--moz-device-pixel-ratio: 2),
+  only screen and (     -o-min-device-pixel-ratio: 2/1),
+  only screen and (        min-device-pixel-ratio: 2),
+  only screen and (                min-resolution: 192dpi),
+  only screen and (                min-resolution: 2dppx) { 
+    @content;
+  }
+}
+
