delete sprite task/template + add nav twig partial example

--- a/app/templates/layouts/default.twig
+++ b/app/templates/layouts/default.twig
@@ -22,6 +22,8 @@
   </head>
   <body class="page-id-{{ routeId }}">
 
+    {% include 'partials/nav.twig' %}
+
     <div id="page-container">
       {% block content %}
       {% endblock %}
