templates/partials changed to templates/components

--- a/app/templates/layouts/default.twig
+++ b/app/templates/layouts/default.twig
@@ -22,7 +22,7 @@
   </head>
   <body class="page-id-{{ routeId }}">
 
-    {% include 'partials/nav.twig' %}
+    {% include 'components/nav.twig' %}
 
     <div id="page-container">
       {% block content %}
