--- a/app/templates/layouts/default.twig
+++ b/app/templates/layouts/default.twig
@@ -14,6 +14,10 @@
 
     <title></title>
 
+    <script>
+      document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+    </script>
+
     <link rel="stylesheet" href="{{ baseUrl() }}/assets/css/main.css">
 
     {# analytics #}
