app > svg twig extension WIP

--- a/app/templates/pages/home.twig
+++ b/app/templates/pages/home.twig
@@ -4,6 +4,7 @@
 
 <section class="page" id="home-page">
   <h1>home</h1>
+  {{ svg('img/marker', {attr: {class: 'inline-svg', id: 'marker-1'}}) }}
 </section>
 
 {% endblock %}
