webpack: add hash to scripts inject

--- a/app/templates/layouts/default.twig
+++ b/app/templates/layouts/default.twig
@@ -44,7 +44,7 @@
     </script>
 
     {# app #}
-    <script src="{{ base_url() }}/assets/js/scripts.js"></script>
+    {% include "inject/scripts-generated.twig" %}
 
   </body>
 </html>
