--- a/app/templates/inject/scripts.twig
+++ b/app/templates/inject/scripts.twig
@@ -1,1 +1,3 @@
-<script src="{{ base_url() }}/assets/js/scripts.<%= webpack.hash %>.js"></script>
+{# dynamically generated - do not modify #}
+
+<script src="{{ base_url() }}/assets/js/scripts.ff0f4a57991e347e8df8.js"></script>
