webpack: split vendors to their own chunk

--- a/app/templates/inject/scripts.twig
+++ b/app/templates/inject/scripts.twig
@@ -1,3 +1,5 @@
 {# dynamically generated - do not modify #}
 
-<script src="{{ base_url() }}/assets/js/scripts.ff0f4a57991e347e8df8.js"></script>
+<script src="{{ base_url() }}/assets/js/vendors.89daff4e5dc6790bd998.js"></script>
+
+<script src="{{ base_url() }}/assets/js/scripts.d9c24286f85bb073beaa.js"></script>
