webpack: split each functionalities (sass, scripts, images, ...)

--- a/app/templates/inject/styles.twig
+++ b/app/templates/inject/styles.twig
@@ -1,1 +1,3 @@
 {# dynamically generated - do not modify #}
+
+<link rel="stylesheet" href="{{ base_url() }}/assets/css/main.4ca03b869b8cbedd051a.css">
