--- a/app/templates/pages/not-found.twig
+++ b/app/templates/pages/not-found.twig
@@ -1,6 +1,7 @@
 {% extends 'pages/base.twig' %}
 
 {% block page_content %}
-  <h1>{{ title }}</h1>
-{% endblock %}
 
+<h1>Not found</h1>
+
+{% endblock %}
