use <main> instead of <div> for page container

--- a/app/templates/layouts/default.twig
+++ b/app/templates/layouts/default.twig
@@ -26,10 +26,10 @@
 
     {% include 'components/nav.twig' %}
 
-    <div id="page-container">
+    <main id="page-container">
       {% block content %}
       {% endblock %}
-    </div>
+    </main>
 
     {# shared data #}
     <script>
